# dotfiles

./: .asdfrc  .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml  .chezmoiignore  .chezmoiremove  .chezmoitasks.toml  .codespellrc  .doc-reference-allow  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .luacheckrc  .lycheeignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  .tool-versions  Brewfile  Brewfile.lock.json  CLAUDE.md  CONVENTIONS.md  DOCKER.md  Dockerfile  Gemfile  LICENSE  Makefile  PLUGINS.md  README.md  TODO.md  aliases.zsh  atuin-config.toml  bash_profile  chezmoi.toml.tmpl  codecompanion-workspace.json  colors.sh  (+70 more)
.chezmoidata/: completions.toml  packages.toml  profiles.toml  uv_tools.toml
.claude/: .gitignore  CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.github/: claude-tools-config.json  labeler.yml  star-organizer-state.json
.vectorcode/: config.json  vectorcode.exclude  vectorcode.include
X/: Xresources  compton.conf  config.rasi  picom.conf  xinitrc  xprofile  xsessionrc
alacritty/: alacritty.yml
bash/: bash_profile  bashrc
config/: konsolerc
configs/: asdf.yaml  git.yaml  go.yaml  i3.yaml  kitty.yaml  macos.yaml  profile-workstation  python.yaml  tmux.yaml  update.yaml  zellij.yaml  zsh.yaml
docs/: claude-completion.md  components.md  container_testing.md  debugging.md  google-chat-formatting.md  health-history.json  homebrew-mise-migration-analysis.md  justfile-architecture.md  kitty.md  llmtrim-vetting.md  macos-automation.md  mise-migration-guide.md  mise-quick-reference.md  platform_specific.md  verifying_environment.md
dot_claude/: CLAUDE.md  KITTY_INTEGRATION.md  executable_setup_kitty_integration.sh  private_CLAUDE.md  run_before_clean-managed-dirs.sh.tmpl  settings.json.tmpl  show-status-overlay.sh  voice-config.json
dot_claude/hooks/voice-notify/: CLAUDE.md  PRD.md  README.md  config.py  notify.py  notify_simple.py  pyproject.toml
dot_claude/hooks/voice-notify/tests/: __init__.py
dot_claude/voice-notify-project/: .gitignore  README.md  pyproject.toml
dot_claude/voice-notify-project/scripts/: install_hooks.py
dot_claude/voice-notify-project/src/claude_voice_notify/: __init__.py  config.py  notify.py
dot_claude/voice-notify-project/tests/: __init__.py  test_notify.py
dot_gemini/: symlink_GEMINI.md
dot_zfunc/: _claude  _just
exact_dot_claude/: .chezmoiignore  CLAUDE.md  executable_session-logger.sh  executable_statusline-command.sh  modify_settings.json  session-logger.sh  session-plugin.local.md  settings.json  statusline-command.sh
fonts/: download.sh
general/: inputrc  profile  xmodmap
i3/: build-config.sh  config  config.base  dunstrc  i3blocks.conf
meta/: base.yaml
neovim/: init.lua  lazy-lock.json
nixos/: README.md  configuration.nix  flake.nix  home.nix
node/: default-packages
pet/: config.toml  snippet.toml
plugins/: CLAUDE.md  README.md
private_dot_config/: CLAUDE.md
private_dot_i3/: config
private_dot_ssh/: config
private_repos/: private_CLAUDE.md
scripts/: CLAUDE.md  README.md  audit-nvim-plugins.py  audit-secrets-baseline.py  audit-secrets-selective.py  check-doc-references.py  check-justfiles.sh  executable_manage_orphans.sh  generate-claude-completion-simple.sh  generate-claude-completion.sh  home-audit.sh  migrate-command-namespaces.sh  smoke-test-docker.sh  update-command-references.sh
setup/: cleanup.sh  fonts.sh  i3.sh  neovim.sh  nodejs.sh  nvim.sh  prompt.sh  python.sh  ruby.sh  rust.sh
sketchybar/: sketchybarrc
ssh/: config
terminal/: alacritty.yml  env  kitty.conf  profile  ssh.conf
tests/: test-claude-context-budget.sh  (+3 more)
(+914 files in other folders)
