[project]
name = "claude-voice-notify"
version = "0.2.0"
description = "Voice notification system for Claude Code with Gemini API TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai[aiohttp]>=1.31.0",
]

[project.scripts]
voice-notify = "notify:main"
voice-config = "config:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
